--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
 
         <activity android:name=".AgregarContactoActivity" />
         <activity android:name=".DetalleContactoActivity" />
+        <activity android:name=".BuscarActivity" />
 
     </application>
 
